# cpm

./: CMakeLists.txt
.github/workflows/: release.yml
include/backend/: Codegen.hpp  InferenceEngine.hpp
include/core/: SymbolTable.hpp  Types.hpp
include/frontend/: Parser.hpp
src/: main.cpm  main.cpp  main.ll
src/backend/: Codegen.cpm  InferenceEngine.cpm
src/core/: SymbolTable.cpm
src/frontend/: Parser.cpm
tests/: bootstrap.sh
